  ANT_HOME/lib/ant-launcher.jar was part of the system CLASSPATH.

* Fix spurious infinite loop detection for filters (introduced in ant 1.6.0).
  Bugzilla Report 23154.

* Fix handling of default ant namespace for nested elements.

* presetdef'ed types did not work with the ant-type attribute

* fixed case handling of macrodef attributes and elements. Bugzilla
  Reports 25687 and 26225.

Other changes:
--------------

* <fixcrlf> has a new attribute - fixlast. Bugzilla Report 23262.

* <p4submit> has 2 new attributes, needsresolveproperty and changeproperty.
  Bugzilla Report 25711.

* Extending ClearCase Tasks :
 - Added an extra option to 'failonerr' to each ClearCase task/command.
 - Extended the functionality of cccheckout. It can check (notco) to see if
  the desired element is already checked out to the current view. Thus it
   won't attempt to check it out again.
 - Added three new ClearCase commands: ccmkattr, ccmkdir, ccmkelem
  Bugzilla Report 26253.

* add description attributes to macrodef attributes and elements.
  Bugzilla Report 24711.

* added nested text support to <macrodef>
  
* added initial support for Java 1.5.  Java 1.5 is now correctly
  detected by Ant and treated just like Java 1.4.  You can now specify
  source="1.5" in the <javac> task.

* created new task <cvsversion>

* added support for branch logging via the tag attribute in <cvschangelog>
  Bugzilla Report 13510.

Changes from Ant 1.6.B3 to Ant 1.6.0
====================================

Changes that could break older environments:
--------------------------------------------

* Attempts to read input in <java> and <exec> tasks will now receive an EOF
  rather than blocking. If you run such a process and rely on it blocking, as
  it would do in Ant 1.5, you may have problem.

* <checksum> message "calculating checksum" downgraded to MSG_VERBOSE
  to limit output in case of large filesets.
  Bugzilla Report 25607.
